--- a/chatservice/docker-compose.yaml
+++ b/chatservice/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-   mysql:
+  mysql:
     image: mysql:8
     container_name: mysql
     restart: always
@@ -13,3 +13,12 @@ services:
       - 3306:3306  
     volumes:
       - .docker/mysql:/var/lib/mysql
+
+  chatservice:
+    build: .
+    container_name: chatservice_app
+    volumes:
+      - .:/go/src
+    ports:
+      - "8081:8080"
+      - "50052:50051"
